# Axiom-Agent

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  analyze.sh  analyze_logs.py  app.py  chat_app.py  check.sh  cognitive_agent.py  dictionary_utils.py  graph_core.py  interpreter_cache.json  knowledge_base.py  knowledge_harvester.py  profiler.py  pyproject.toml  render_model.py  requirements.txt  run_visualizers.sh  setup.sh  universal_interpreter.py  verify.py  visualize_brain.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
Curriculum/: K-wk2.txt  K-wk3.txt  K-wk4.txt
Curriculum/1st/: 1-wk1.txt
axiom/: cognitive_agent.py  dictionary_utils.py  graph_core.py
axiom_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
setup/: app.py  app_model.py  autonomous_trainer.py  chat_app.py  cnt.py  monitor.sh  render_model.py  wake_agent.sh
src/axiom/: __main__.py  cognitive_agent.py  config.py  dictionary_utils.py  goal_manager.py  graph_core.py  knowledge_base.py  knowledge_harvester.py  lexicon_manager.py  logging_config.py  metacognitive_engine.py  symbolic_parser.py  universal_interpreter.py  utils.py
src/axiom/rendered/: Axiom_0.6.axm
src/axiom/scripts/: analyze_logs.py  app.py  app_model.py  autonomous_trainer.py  cnt.py  cycle_manager.py  download_model.py  extract_code_suggestion.py  render_model.py  test_metacog.py  visualize_brain.py  visualize_fibonacci_galaxy.py  visualize_seed_of_life.py
src/axiom/static/: manifest.json  style.css  sw.js
src/axiom/templates/: index.html
static/: manifest.json  style.css  sw.js
templates/: index.html
tests/: conftest.py  profiler.py  simulation_test.py  test_app_model.py  test_autonomous_trainer.py  test_chat.py  test_concept_node.py  test_conversational_flows.py  test_core_behavior.py  test_core_functionality.py  test_dictionary_utils.py  test_extras.py  test_goal_manager.py  test_golden_path.py  test_golden_path_mocked.py  test_harvest.py  test_harvester.py  test_initialization.py  test_interpreter.py  test_introspection_suite.py  test_knowledge_harvester.py  test_metacognitive_engine_entrypoint.py  test_optimize_code.py  test_parser.py  test_scripts.py  test_symbolic_parser.py  test_utils.py  verify.py
