# pyproject.toml

[project]
name = "axiom"
version = "0.1.0"
description = "A cognitive architecture for a new type of AI designed for self-directed learning."
authors = [
    { name = "Victor Nevarez", email = "vicsanity623@gmail.com" },
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "APScheduler",
    "Flask",
    "llama-cpp-python",
    "networkx",
    "nltk",
    "requests",
    "wikipedia",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.2",
    "mypy>=1.18.1",
    "pytest>=6.0.0",
    "pytest-cov>=6.0.0",
    # Moving ngrok here as it's a dev/optional feature
    "pyngrok",
]

[project.urls]
"Source" = "https://github.com/vicsanity623/Axiom-Agent"
"Bug Tracker" = "https://github.com/vicsanity623/Axiom-Agent/issues"


# --- Tool Configurations ---

[tool.ruff]
line-length = 88
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]

[tool.ruff.lint]
select = [
    "C4",   # flake8-comprehensions
    "COM",  # flake8-commas
    "E",    # Error
    "F",    # pyflakes
    "W",    # warnings
    "I",    # isort
    "N",    # pep8-naming
    "PT",   # flake8-pytest-style
    "PYI",  # flake8-pyi
    "R",    # Refactor
    "RET",  # flake8-return
    "SLOT", # flake8-slots
    "TCH",  # flake8-type-checking
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
]
extend-ignore = [
    "E501",   # line-too-long
]

[tool.mypy]
files = ["src/", "tests/", "setup/"]
enable_error_code = [
    "truthy-bool",
    "mutable-override",
    "exhaustive-match",
]
show_column_numbers = true
show_error_codes = true
show_traceback = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
local_partial_types = true
no_implicit_optional = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
# Add options here to avoid typing them in check.sh
# -v for verbose, --cov for coverage report
addopts = "-v --cov-report=term-missing --cov=axiom"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source_pkgs = ["axiom"]
omit = []
parallel = true
relative_files = true
source = ["."]

[tool.coverage.report]
precision = 1
skip_covered = true
exclude_also = [
    "pragma: no cover",
    "abc.abstractmethod",
    "if TYPE_CHECKING.*:",
    "if _t.TYPE_CHECKING:",
    "if t.TYPE_CHECKING:",
    "@overload",
    'class .*\bProtocol\b.*\):',
    "raise NotImplementedError",
]
partial_branches = [
    "pragma: no branch",
    "if not TYPE_CHECKING:",
    "if not _t.TYPE_CHECKING:",
    "if not t.TYPE_CHECKING:",
    "if .* or not TYPE_CHECKING:",
    "if .* or not _t.TYPE_CHECKING:",
    "if .* or not t.TYPE_CHECKING:",
]
