# pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[project]
name = "axiom"
version = "0.5.7"
description = "A cognitive architecture for a new type of symboli-first AI designed for self-directed learning."
authors = [
    { name = "Victor Nevarez", email = "vicsanity623@gmail.com" },
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "APScheduler",
    "Flask",
    "gradio",
    "google-generativeai",
    "llama-cpp-python",
    "networkx~=3.5.0",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "nltk",
    "python-Levenshtein>=0.25.1",
    "requests",
    "rich",
    "pyvis",
    "spacy>=3.7.0",
    "thefuzz>=0.22.1",
    "tqdm",
    "typer",
    "wikipedia",
    "scipy",
    "blis>=0.9.0",
]

# if you want the small version of en core web use this:
    # en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl

[project.optional-dependencies]
dev = [
    "mypy>=1.18.1",
    "pyngrok",
    "pytest-cov>=6.0.0",
    "pytest>=6.0.0",
    "ruff>=0.9.2",
    "types-requests",
]

[project.urls]
"Source" = "https://github.com/vicsanity623/Axiom-Agent"
"Bug Tracker" = "https://github.com/vicsanity623/Axiom-Agent/issues"

[project.scripts]
axiom-llm = "axiom.scripts.download_model:main"
axiom-train = "axiom.scripts.autonomous_trainer:main"
axiom-render = "axiom.scripts.render_model:main"
axiom-teach = "axiom.scripts.cnt:main"
axiom-visualize = "axiom.scripts.visualize_brain:main" # Added for HTML visualization
axiom-webui = "axiom.scripts.app_model:main"
axiom-webui_app = "axiom.scripts.app:main"
axiom-metatest = "axiom.scripts.test_metacog:main"
axiom-extract = "axiom.scripts.extract_code_suggestion:main"
axiom-analyze = "axiom.scripts.analyze_logs:main"


# --- Tool Configurations ---

[tool.ruff]
line-length = 88
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]

[tool.ruff.lint]
select = [
    "C4",   # flake8-comprehensions
    "COM",  # flake8-commas
    "E",    # Error
    "F",    # pyflakes
    "W",    # warnings
    "I",    # isort
    "N",    # pep8-naming
    "PT",   # flake8-pytest-style
    "PYI",  # flake8-pyi
    "R",    # Refactor
    "RET",  # flake8-return
    "SLOT", # flake8-slots
    "TCH",  # flake8-type-checking
    "UP",   # pyupgrade
    "YTT",  # flake8-2020
]
extend-ignore = [
    "E501",   # line-too-long
    "COM812",
]

[tool.mypy]
files = ["src/", "tests/"]
enable_error_code = [
    "truthy-bool",
    "mutable-override",
    "exhaustive-match",
]
show_column_numbers = true
show_error_codes = true
show_traceback = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
local_partial_types = true
no_implicit_optional = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
# Add options here to avoid typing them in check.sh
# -v for verbose, --cov for coverage report
addopts = "-v --cov-report=term-missing --cov=axiom"
testpaths = [
    "tests",
]
filterwarnings = [
        "ignore::FutureWarning:networkx",
        "ignore::DeprecationWarning",
]
markers = [
    "introspection: tests that require a live LLM model and are skipped in standard CI",
]

[tool.setuptools.package-data]
axiom = ["static/*", "templates/*"]

[tool.coverage.run]
branch = true
parallel = true
relative_files = true
source = ["."]
concurrency = ["multiprocessing", "thread"]
source_pkgs = ["axiom"]
omit = ["*/tests/*"]
data_file = ".coverage"

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
precision = 1
skip_covered = true
exclude_also = [
    "pragma: no cover",
    "abc.abstractmethod",
    "if TYPE_CHECKING.*:",
    "if _t.TYPE_CHECKING:",
    "if t.TYPE_CHECKING:",
    "@overload",
    'class .*\bProtocol\b.*\):',
    "raise NotImplementedError",
]
partial_branches = [
    "pragma: no branch",
    "if not TYPE_CHECKING:",
    "if not _t.TYPE_CHECKING:",
    "if not t.TYPE_CHECKING:",
    "if .* or not TYPE_CHECKING:",
    "if .* or not _t.TYPE_CHECKING:",
    "if .* or not t.TYPE_CHECKING:",
]